--- a/xebia-ios/www/css/styles.css
+++ b/xebia-ios/www/css/styles.css
@@ -1,137 +1,183 @@
-#post-list {
-    position: absolute;
-    top:0;
-    bottom: 30px;
-    left: 0;
-    right:0;
+/* line 1, ../sass/styles.scss */
+html, body, img, div, ul, li, span, h1, h2, h3, h4, h5, h6, a, p {
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 
-@media screen and (max-width: 960px) {
-    #post-list ul li.item {
-        display: block;
-        height: auto;
-    }
+/* line 7, ../sass/styles.scss */
+html {
+  /*
+      -webkit-text-size-adjust: none;
+      font-size-adjust:none;
+  */
+  font-family: 'HelveticaNeue';
+  font-size: 20px;
+  color: #444;
 }
 
-@media screen and (min-width: 961px) {
-    #post-list ul li.post-item {
-        width: 50%;
-        display: block;
-        height: auto;
-        float: left;
-    }
+/* line 17, ../sass/styles.scss */
+body {
+  background: #fff;
 }
 
-.post {
-    /*padding: 10px;*/
-    margin: 10px;
-
-    -webkit-border-radius: 0.4em;
-       -moz-border-radius: 0.4em;
-         -o-border-radius: 0.4em;
-        -ms-border-radius: 0.4em;
-            border-radius: 0.4em;
-
+/* line 21, ../sass/styles.scss */
+a {
+  color: #CC7833;
+  font-style: italic;
+  text-decoration: none;
 }
 
-.post-header {
-    position: relative;
-    background: #ddd;
-    height: 64px;
+/* line 27, ../sass/styles.scss */
+a.more-link {
+  padding: 2px 10px 4px 10px;
+  border-radius: 3px;
+  background: #333;
+  float: right;
+  margin-right: 10px;
+}
+/* line 34, ../sass/styles.scss */
+a.more-link:hover {
+  background: #333;
+  color: #bb6722;
+  text-decoration: underline;
 }
 
-.post-header:after {
-    content: "";
-    display: block;
-    clear: both;
+/* line 46, ../sass/styles.scss */
+#post #post-header #post-header-title {
+  padding: 10px;
+}
+/* line 48, ../sass/styles.scss */
+#post #post-header #post-header-title h1 {
+  color: #141414;
+  font-family: 'HelveticaNeue';
+  font-size: 16px;
+  text-align: center;
+}
+/* line 56, ../sass/styles.scss */
+#post #post-header #post-header-body {
+  background: #444;
+  border-top: 1px solid #111;
+  border-bottom: 1px solid #222;
+}
+/* line 62, ../sass/styles.scss */
+#post #post-header #post-header-body #post-author-images-content {
+  float: left;
+  width: 54px;
+}
+/* line 66, ../sass/styles.scss */
+#post #post-header #post-header-body #post-author-images-content #post-author-images {
+  width: 54px;
+  margin: 0;
+  padding: 0;
+}
+/* line 71, ../sass/styles.scss */
+#post #post-header #post-header-body #post-author-images-content #post-author-images li {
+  list-style: none;
+  margin: 0;
+  padding: 5px;
+  width: 44px;
+  height: 44px;
+}
+/* line 78, ../sass/styles.scss */
+#post #post-header #post-header-body #post-author-images-content #post-author-images li img {
+  width: 44px !important;
+  height: 44px !important;
+}
+/* line 82, ../sass/styles.scss */
+#post #post-header #post-header-body #post-author-images-content #post-author-images li img:last-child {
+  border-bottom: none;
+}
+/* line 93, ../sass/styles.scss */
+#post #post-header #post-header-body #post-header-body-content {
+  padding: 5px;
+  padding-left: 59px;
+}
+/* line 97, ../sass/styles.scss */
+#post #post-header #post-header-body #post-header-body-content h1 {
+  color: #CC7833;
+  font-family: 'HelveticaNeue-CondensedBold';
+  font-size: 12px;
+}
+/* line 103, ../sass/styles.scss */
+#post #post-header #post-header-body #post-header-body-content h2 {
+  color: #888;
+  font-family: 'HelveticaNeue-CondensedBold';
+  font-size: 11px;
+}
+/* line 108, ../sass/styles.scss */
+#post #post-header #post-header-body #post-header-body-content h2 em {
+  font-family: 'HelveticaNeue-Italic';
+  font-weight: 200;
+  color: #ccc;
+  font-size: 10px;
+}
+/* line 114, ../sass/styles.scss */
+#post #post-header #post-header-body #post-header-body-content h2 em ul {
+  margin: 0;
+  padding: 0;
+}
+/* line 118, ../sass/styles.scss */
+#post #post-header #post-header-body #post-header-body-content h2 em ul li:after {
+  content: ", ";
+}
+/* line 121, ../sass/styles.scss */
+#post #post-header #post-header-body #post-header-body-content h2 em ul li:last-child:after {
+  content: "";
+}
+/* line 129, ../sass/styles.scss */
+#post #post-header #post-header-body:after {
+  content: "";
+  display: block;
+  clear: both;
 }
 
-.post-image {
-    float:left;
-    margin-right: 5px;
-    width: 64px;
-    height: 64px;
+/* line 140, ../sass/styles.scss */
+#post-body {
+  font-family: 'HelveticaNeue';
+  font-size: 10px;
+  padding: 10px;
+}
+/* line 145, ../sass/styles.scss */
+#post-body ul {
+  margin: 10px;
+  margin-left: 30px;
+}
+/* line 151, ../sass/styles.scss */
+#post-body h1, #post-body h2, #post-body h3, #post-body h4, #post-body h5, #post-body h6 {
+  padding: 5px;
+}
+@media all and (max-width: 480px) {
+  /* line 140, ../sass/styles.scss */
+  #post-body {
+    font-size: 10px;
+  }
+}
+@media all and (min-width: 481px) and (max-width: 960px) {
+  /* line 140, ../sass/styles.scss */
+  #post-body {
+    font-size: 11px;
+  }
+}
+@media all and (min-width: 961px) and (max-width: 1152px) {
+  /* line 140, ../sass/styles.scss */
+  #post-body {
+    font-size: 12px;
+  }
+}
+@media all and (min-width: 1153px) {
+  /* line 140, ../sass/styles.scss */
+  #post-body {
+    font-size: 14px;
+  }
 }
 
-.post-author {
-    padding: 5px;
-    margin: 0;
-    font-weight: bold;
-    color: #444;
-    font-size: 0.8em;
-    line-height: 1.0em;
-    font-family: Helvetica, Arial, sans-serif;
-}
-
-.post-date {
-    float: right;
-    padding: 5px;
-    font-weight: bold;
-    color: #444;
-    font-size: 0.8em;
-    line-height: 1.0em;
-    font-family: Helvetica, Arial, sans-serif;
-}
-
-
-ul.post-tags {
-    position: absolute;
-    left: 64px;
-    bottom: 0;
-    margin: 5px;
-    right: 5px;
-    color: #888;
-    font-size: 0.8em;
-    line-height: 1.1em;
-    font-family: Helvetica, Arial, sans-serif;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-li.post-tag {
-    display: inline;
-}
-
-li.post-tag:after {
-    content: ",";
-}
-
-li.post-tag:last-child:after {
-    content: "";
-}
-
-.post-body {
-    padding: 0;
-    margin: 0;
-    background: #f0f0f0;
-    height: 110px;
-}
-
-.post-title {
-    position: absolute;
-    left: 64px;
-    right: 0;
-    bottom: 0;
-    padding: 5px;
-    margin: 0;
-    color: #666;
-    font-weight: normal;
-    font-size: 1.0em;
-    line-height: 1.0em;
-    font-family: Helvetica, Arial, sans-serif;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.post-content {
-    height: 100px;
-    padding: 5px;
-    font-weight: normal;
-    color: #222;
-    font-size: 0.8em;
-    line-height: 1.0em;
-    font-family: Helvetica, Arial, sans-serif;
-    overflow-y: auto;
+/* line 174, ../sass/styles.scss */
+code.prettyprint, pre.prettyprint {
+  overflow: auto;
+  width: 100%;
+  max-height: 400px;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: #333 !important;
 }
