--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -174,6 +174,62 @@
             </objects>
             <point key="canvasLocation" x="-3070" y="1357"/>
         </scene>
+        <!--Card Table View Controller - Xebia Essentials-->
+        <scene sceneID="w1x-by-XE8">
+            <objects>
+                <tableViewController storyboardIdentifier="cards" id="edY-WI-ptd" customClass="XECardTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Nzo-uG-I0Y">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="dataSource" destination="edY-WI-ptd" id="eiL-Xi-8qn"/>
+                            <outlet property="delegate" destination="edY-WI-ptd" id="BCl-nc-Tf3"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Xebia Essentials" id="WA0-9b-hg1"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OEE-cV-YZR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3070" y="578"/>
+        </scene>
+        <!--Card Details View Controller - Xebia Card-->
+        <scene sceneID="OyG-W4-d6c">
+            <objects>
+                <viewController storyboardIdentifier="cardDetails" id="NT0-6l-spS" customClass="XECardDetailsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3n1-Vr-Q6F">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="If something is too complex to understand, it must be wrong" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xs2-N5-4uj">
+                                <rect key="frame" x="20" y="20" width="280" height="55"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="...and it's your job to prove it wrong. Also known as the 'Poutsma Principle'." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nqe-2I-WdT">
+                                <rect key="frame" x="20" y="83" width="280" height="401"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Xebia Card" id="MWX-eL-zIS"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="nqe-2I-WdT" id="KzZ-n7-ONr"/>
+                        <outlet property="titleLabel" destination="xs2-N5-4uj" id="vJX-lp-oIb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aIB-6g-8k9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2698" y="578"/>
+        </scene>
         <!--Github Repository Controller-->
         <scene sceneID="0nK-Ho-fRt">
             <objects>
@@ -254,7 +310,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g5W-mt-AEC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3210" y="154"/>
+            <point key="canvasLocation" x="-3070" y="-78"/>
         </scene>
         <!--Video Details View Controller - Video Détails-->
         <scene sceneID="0hg-JV-tGh">
@@ -383,7 +439,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JUj-cI-96J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2838" y="154"/>
+            <point key="canvasLocation" x="-2698" y="-78"/>
         </scene>
         <!--Twitter Table View Controller-->
         <scene sceneID="hs0-V0-Xbe">
@@ -483,6 +539,93 @@
         <image name="homeview.png" width="245" height="114"/>
         <image name="video_placeholder.png" width="320" height="180"/>
     </resources>
+    <classes>
+        <class className="EBEventTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EBEventTableViewController.h"/>
+        </class>
+        <class className="GHMemberTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GHMemberTableViewController.h"/>
+        </class>
+        <class className="GHRepositoryTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GHRepositoryTableViewController.h"/>
+        </class>
+        <class className="GHTabBarController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GHTabBarController.h"/>
+        </class>
+        <class className="TTTweetTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TTTweetTableViewController.h"/>
+        </class>
+        <class className="UINavigationBar">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UINavigationBar.h"/>
+            <relationships>
+                <relationship kind="action" name="back:"/>
+            </relationships>
+        </class>
+        <class className="VMVideoDetailsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VMVideoDetailsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="commentCount" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="date" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="definition" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="displayName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="likeCount" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="playCount" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="videoImage" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="VMVideoTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VMVideoTableViewController.h"/>
+        </class>
+        <class className="WPAuthorTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPAuthorTableViewController.h"/>
+        </class>
+        <class className="WPCategoryTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPCategoryTableViewController.h"/>
+        </class>
+        <class className="WPPostTableViewController" superclassName="XBInfiniteScrollTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPPostTableViewController.h"/>
+        </class>
+        <class className="WPRecentPostTableViewController" superclassName="WPPostTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPRecentPostTableViewController.h"/>
+        </class>
+        <class className="WPTabBarController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPTabBarController.h"/>
+        </class>
+        <class className="WPTagTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPTagTableViewController.h"/>
+        </class>
+        <class className="XBHomeController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBHomeController.h"/>
+        </class>
+        <class className="XBInfiniteScrollTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBInfiniteScrollTableViewController.h"/>
+        </class>
+        <class className="XBMenuViewController" superclassName="XBTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBMenuViewController.h"/>
+        </class>
+        <class className="XBReloadableTableViewController" superclassName="XBTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBReloadableTableViewController.h"/>
+        </class>
+        <class className="XBTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBTableViewController.h"/>
+        </class>
+        <class className="XBWebViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBWebViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="XECardDetailsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardDetailsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="descriptionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="XECardTableViewController" superclassName="XBReloadableTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardTableViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
